--- a/css/estilos.css
+++ b/css/estilos.css
@@ -392,4 +392,5 @@ main section .mas-productos{
 main section .contenedor-masproductos{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    margin-left: 200px;
 }
